--- a/05-data-processing/02-pandas/2.2-pandas_series/exercises_pandas_series.ipynb
+++ b/05-data-processing/02-pandas/2.2-pandas_series/exercises_pandas_series.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import the necessary packages\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -34,13 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Brussel      6.34\n",
+       "Antwerpen    5.45\n",
+       "Brugge       4.12\n",
+       "Gent         2.45\n",
+       "Hasselt      6.08\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delay_data = {\"Brussel\": 6.34, \"Antwerpen\": 5.45, \"Brugge\": 4.12, \"Gent\": 2.45, \"Hasselt\": 6.08}\n",
     "\n",
-    "# Your code"
+    "train_delay=pd.Series(delay_data)\n",
+    "train_delay"
    ]
   },
   {
@@ -52,11 +69,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Brussel-Centraal      6.34\n",
+       "Antwerpen-Centraal    5.45\n",
+       "Brugge                4.12\n",
+       "Gent-Sint-Pieters     2.45\n",
+       "Hasselt               6.08\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code"
+    "train_delay.index=[\"Brussel-Centraal\",\"Antwerpen-Centraal\",\"Brugge\",\"Gent-Sint-Pieters\",\"Hasselt\"]\n",
+    "train_delay"
    ]
   },
   {
@@ -68,11 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Brussel-Centraal     6.34\n",
+       "Gent-Sint-Pieters    2.45\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code"
+    "brussel_gent=pd.Series(train_delay,index=[\"Brussel-Centraal\",\"Gent-Sint-Pieters\"])\n",
+    "brussel_gent"
    ]
   },
   {
@@ -91,12 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5.45)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
-    "# Your code"
+    "train_delay[\"Antwerpen-Centraal\"]"
    ]
   },
   {
@@ -108,11 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Brussel-Centraal    6.34\n",
+       "Hasselt             6.08\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code"
+    "delay_by_6=pd.Series(train_delay[train_delay>=6])\n",
+    "delay_by_6"
    ]
   },
   {
@@ -124,11 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(8.34)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code"
+    "train_delay[\"Brussel-Centraal\"]=8.34\n",
+    "train_delay[\"Brussel-Centraal\"]"
    ]
   },
   {
@@ -144,11 +229,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Brussel-Centraal', 'Antwerpen-Centraal', 'Brugge', 'Gent-Sint-Pieters',\n",
+      "       'Hasselt'],\n",
+      "      dtype='object')\n",
+      "[8.34 5.45 4.12 2.45 6.08]\n",
+      "5\n",
+      "float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code"
+    "print(train_delay.index)\n",
+    "print(train_delay.values)\n",
+    "print(train_delay.count())\n",
+    "print(train_delay.dtype)"
    ]
   },
   {
@@ -167,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,11 +300,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 6\n",
+      "10\n",
+      "Index(['Lion', 'Elephant', 'Giraffe', 'Zebra', 'Kangaroo', 'Penguin', 'Panda',\n",
+      "       'Tiger', 'Flamingo', 'Crocodile'],\n",
+      "      dtype='object')\n",
+      "[ 5  3  7 12  4 15  2  6  8  3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code"
+    "zoo_animals=pd.Series(animal_counts)\n",
+    "print(zoo_animals.values[2],zoo_animals.values[7])\n",
+    "print(zoo_animals.size)\n",
+    "print(zoo_animals.keys())\n",
+    "print(zoo_animals.values)"
    ]
   },
   {
@@ -220,11 +338,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lion         5\n",
+      "Giraffe      7\n",
+      "Zebra       12\n",
+      "Penguin     15\n",
+      "Tiger        6\n",
+      "Flamingo     8\n",
+      "dtype: int64\n",
+      "Elephant     3\n",
+      "Panda        3\n",
+      "Crocodile    3\n",
+      "Koala        3\n",
+      "dtype: int64\n",
+      "Lion         5\n",
+      "Elephant     3\n",
+      "Giraffe      7\n",
+      "Zebra       12\n",
+      "Kangaroo     4\n",
+      "Penguin     15\n",
+      "Panda        3\n",
+      "Tiger        6\n",
+      "Flamingo     8\n",
+      "Koala        3\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code"
+    "print(zoo_animals[zoo_animals>=5])\n",
+    "equal_or_below_3=pd.Series(zoo_animals[zoo_animals<=3])\n",
+    "print(equal_or_below_3)\n",
+    "zoo_animals[\"Panda\"]=3\n",
+    "zoo_animals=zoo_animals.drop(labels=[\"Crocodile\"])\n",
+    "zoo_animals[\"Koala\"]=3\n",
+    "print(zoo_animals)"
    ]
   }
  ],
@@ -244,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
