--- a/05-data-processing/02-pandas/2.2-pandas_series/pandas_series.ipynb
+++ b/05-data-processing/02-pandas/2.2-pandas_series/pandas_series.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,13 +64,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Mickey\n",
+       "1         Minnie\n",
+       "2          Pluto\n",
+       "3    Donald Duck\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = [\"Mickey\", \"Minnie\", \"Pluto\", \"Donald Duck\"]\n",
     "series_from_list = pd.Series(data)\n",
-    "#series_from_list "
+    "series_from_list "
    ]
   },
   {
@@ -101,11 +116,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Participant1       Potato\n",
+      "Participant2      Chicken\n",
+      "Participant3      Arcadia\n",
+      "Participant4    Spongebob\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code"
+    "data=[\"Potato\",\"Chicken\",\"Arcadia\",\"Spongebob\"]\n",
+    "idx=[\"Participant1\",\"Participant2\",\"Participant3\",\"Participant4\"]\n",
+    "series_custon_index=pd.Series(data,idx)\n",
+    "print(series_custon_index)"
    ]
   },
   {
@@ -127,9 +157,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original series_from_list:\n",
+      "0         Mickey\n",
+      "1         Minnie\n",
+      "2          Pluto\n",
+      "3    Donald Duck\n",
+      "dtype: object\n",
+      "series_from_list:\n",
+      "0         Mickey\n",
+      "1         Winnie\n",
+      "2          Pluto\n",
+      "3    Donald Duck\n",
+      "dtype: object\n",
+      "copy:\n",
+      "0         Mickey\n",
+      "1         Winnie\n",
+      "2          Pluto\n",
+      "3    Donald Duck\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Original series_from_list:\")\n",
     "print(series_from_list)\n",
@@ -152,9 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original:\n",
+      "0         Mickey\n",
+      "1         Winnie\n",
+      "2          Pluto\n",
+      "3    Donald Duck\n",
+      "dtype: object\n",
+      "New copy\n",
+      "0         Mickey\n",
+      "1          Timon\n",
+      "2          Pluto\n",
+      "3    Donald Duck\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "new_copy = pd.Series.copy(series_from_list, deep=True)\n",
     "new_copy[1] = \"Timon\"\n",
@@ -175,9 +249,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "figure1         Mickey\n",
+       "figure2          Timon\n",
+       "figure3          Pluto\n",
+       "figure4    Donald Duck\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "idx = [\"figure1\", \"figure2\", \"figure3\", \"figure4\"]\n",
     "new_copy.index = idx\n",
@@ -201,9 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1\n",
+       "b    2\n",
+       "c    3\n",
+       "d    4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = {\"a\": 1, \"b\": 2, \"c\": 3, \"d\":4}\n",
     "series_from_dict = pd.Series(data)\n",
@@ -220,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code"
+    "my_series=pd.Series({\"London\":10,\"Tripoli\":100,\"Cairo\":10})"
    ]
   },
   {
@@ -237,9 +341,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "London      10\n",
+       "Tripoli    100\n",
+       "Cairo       10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Displaying the Series\n",
     "my_series"
@@ -256,9 +374,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "London    10\n",
+       "Cairo     10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lc_series = pd.Series(my_series, index=[\"London\", \"Cairo\"])\n",
     "lc_series"
@@ -275,11 +406,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          10\n",
+       "1    Potatoes\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code"
+    "mix=pd.Series([10,\"Potatoes\"])\n",
+    "mix"
    ]
   },
   {
@@ -299,9 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(100)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Accessing a specific element in the Series using the index label\n",
     "my_series['Tripoli']"
@@ -309,14 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "Mickey\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# more examples\n",
-    "my_series['Tripoli']\n",
-    "(series_from_list[0])\n",
-    "(series_from_dict[\"b\"])\n"
+    "print(my_series['Tripoli'])\n",
+    "print(series_from_list[0])\n",
+    "print(series_from_dict[\"b\"])\n"
    ]
   },
   {
@@ -335,9 +501,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tripoli    100\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filtering elements based on a condition\n",
     "my_series[my_series > 10] #shows all values (with their index), greater than 10."
@@ -345,9 +523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "London      10\n",
+       "Tripoli    100\n",
+       "Cairo       10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_series"
    ]
@@ -369,9 +561,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['London', 'Tripoli', 'Cairo'], dtype='object')\n",
+      "London\n",
+      "[ 10 100  10]\n",
+      "100\n",
+      "3\n",
+      "3\n",
+      "__________________________\n",
+      "10     2\n",
+      "100    1\n",
+      "Name: count, dtype: int64\n",
+      "int64\n",
+      "Cairo    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "#Show the indices of the values of the Series\n",
     "print(my_series.index)\n",
@@ -419,9 +631,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "London     200\n",
+       "Tripoli    100\n",
+       "Cairo       10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Assign a new value to the index London\n",
     "my_series[\"London\"] = 200\n",
@@ -437,9 +663,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "London     200\n",
+       "Tripoli      0\n",
+       "Cairo       10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Assign 00 to all values equal to 100\n",
     "my_series[my_series==100] = 00\n",
@@ -456,9 +696,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Brussels     200\n",
+       "Amsterdam      0\n",
+       "Berlin        10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_series.index = [\"Brussels\", \"Amsterdam\", \"Berlin\"]\n",
     "my_series"
@@ -489,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
