Working on displaying own csv file

--- a/05-data-processing/03-data_visualization/exercises_visualizations.ipynb
+++ b/05-data-processing/03-data_visualization/exercises_visualizations.ipynb
@@ -234,7 +234,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2120f2f1a30>]"
+       "[<matplotlib.lines.Line2D at 0x23df88e0b60>]"
       ]
      },
      "execution_count": 5,
@@ -263,7 +263,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2127e24efc0>]"
+       "[<matplotlib.lines.Line2D at 0x23df88c0680>]"
       ]
      },
      "execution_count": 6,
@@ -457,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2120f305a00>"
+       "<matplotlib.legend.Legend at 0x23dfae0de50>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "<Axes: title={'center': 'Bird Count'}, xlabel='Year', ylabel='Count'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
